# named-servant-client

./: named-servant-client.cabal
src/Servant/: Client.hs
src/Servant/Client/: Named.hs  Record.hs
src/Servant/Named/: Client.hs
